# rust-learn

./: .editorconfig  .env.example  .gitignore  Cargo.toml  README.md  clippy.toml  config.toml  justfile
src/: config.rs  db.rs  error.rs  main.rs  openapi.rs  router.rs
src/dto/: common.rs  user.rs
src/entities/: user.rs
src/handlers/: user.rs
src/learn/: demo_01_basics.rs  demo_02_ownership.rs  demo_03_types.rs  demo_04_error_handling.rs  demo_05_generics_traits.rs  demo_06_advanced.rs  demo_07_concurrency.rs  demo_08_macros.rs  mod.rs
src/repositories/: user_repo.rs
src/services/: user_service.rs
tests/: learn_demo_test.rs
