[package]
name = "rust-learn"
version = "0.1.0"
edition = "2021"

[dependencies]
# 异步运行时
tokio = { version = "1", features = ["full"] }
# Web 框架
axum = "0.7"
# ORM (ActiveRecord 风格)
sea-orm = { version = "1", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros", "with-chrono", "with-uuid"] }
# JSON 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# CLI 参数解析
clap = { version = "4", features = ["derive"] }
# 结构化日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# 错误处理
thiserror = "1"
anyhow = "1"
# HTTP 中间件 (CORS, 请求日志)
tower-http = { version = "0.5", features = ["cors", "trace"] }
# 时间处理
chrono = { version = "0.4", features = ["serde"] }
# UUID 生成
uuid = { version = "1", features = ["v4"] }
# 环境变量加载
dotenvy = "0.15"
# 多层配置合并
figment = { version = "0.10", features = ["toml", "env"] }
# OpenAPI 文档生成
utoipa = { version = "4", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }
